--- a/setting.html
+++ b/setting.html
@@ -12,7 +12,7 @@
 <body style="font-family: Arial, Helvetica, sans-serif; font-size: 25px;">
     <div class="container">
         <div class="contain">
-            <h2>Settings</h2><br>
+            <h3>Settings</h3><br>
             <div class="box1">
                 <label><b>Set background Color</b></label><br><br>
                 <select id="demo" onchange="show()">
@@ -54,29 +54,19 @@
                 }
                 window.onload = function () {
                     if (document.cookie.length != 0) {
-                        var a = document.cookie.split("=");
+                        var a = document.cookie.split(";");
                         document.getElementById("demo").value = a[1];
                         document.bgColor = a[1];
                     }
                 }
                 function setcookie() {
-                    var cookiename = document.getElementById("iname").value
-                    var cookievalue = document.getElementById("ivalue").value
-                    if (cookiename == '' || cookievalue == '') {
-                        window.alert('Please enter cookie name and cookie value')
-                        return
-                    }
-                    document.cookie = cookiename + "=" + cookievalue + ";"
+                    
                 }
                 function display() {
                     alert(document.cookie);
                 }
                 function del() {
-                    if (cookieSelect.value == '') {
-                        window.alert("Please select a value")
-                        return
-                    }
-                    document.cookie = cookieSelect.value + "=" + ";";
+                    
                 }
             </script>
         </div>
