--- a/setting.html
+++ b/setting.html
@@ -58,6 +58,17 @@
                         document.getElementById("demo").value = a[1];
                         document.bgColor = a[1];
                     }
+
+                    var colorCookie = "color";
+
+                    var cookieList = document.cookie.split(';');
+                    console.log(cookieList);
+                    for (var i = 0; i < cookieList.length; i++) {
+                        var targetCookie = cookieList[i].split("=");
+                        if (targetCookie[0].match(colorCookie)) {
+                            document.bgColor = targetCookie[1];
+                        }
+                    }
                 }
                 function setcookie() {
                     var cookiename = document.getElementById("iname").value
